--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "firebase": "^4.8.0",
+    "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-scrollable-tab-view": "^0.8.0",
