--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "firebase": "^4.8.0",
+    "firebase": "^4.8.1",
     "moment": "^2.20.1",
-    "react": "16.0.0",
-    "react-native": "0.51.0",
+    "react": "^16.0.0",
+    "react-native": "^0.51.0",
+    "react-native-router-flux": "^4.0.0-beta.27",
     "react-native-scrollable-tab-view": "^0.8.0",
-    "react-native-vector-icons": "^4.4.2",
-    "react-navigation": "^1.0.0-beta.21"
+    "react-native-vector-icons": "^4.4.3",
+    "react-navigation": "^1.0.0-beta.23",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-jest": "21.2.0",
-    "babel-preset-react-native": "4.0.0",
+    "babel-jest": "^21.2.0",
+    "babel-preset-react-native": "^4.0.0",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "^16.0.0"
   },
   "jest": {
     "preset": "react-native"
