--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.20.1",
     "react": "^16.0.0",
     "react-native": "^0.51.0",
+    "react-native-elements": "^0.18.5",
     "react-native-router-flux": "^4.0.0-beta.27",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-vector-icons": "^4.5.0",
