--- a/ios/shpeucfapp.xcodeproj/xcshareddata/xcschemes/shpeucfapp.xcscheme
+++ b/ios/shpeucfapp.xcodeproj/xcshareddata/xcschemes/shpeucfapp.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "shpeucfapp.app"
+               BuildableName = "SHPE UCF.app"
                BlueprintName = "shpeucfapp"
                ReferencedContainer = "container:shpeucfapp.xcodeproj">
             </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "shpeucfapp.app"
+            BuildableName = "SHPE UCF.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
@@ -96,7 +96,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "shpeucfapp.app"
+            BuildableName = "SHPE UCF.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
@@ -115,7 +115,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "shpeucfapp.app"
+            BuildableName = "SHPE UCF.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
