--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "^0.51.0",
     "react-native-beacons-manager": "^1.0.7",
     "react-native-calendars": "^1.16.1",
+    "react-native-camera": "^1.0.1",
     "react-native-elements": "^0.18.5",
     "react-native-router-flux": "^4.0.0-beta.27",
     "react-native-ui-kitten": "^3.0.0",
