--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "firebase": "^4.8.1",
+    "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-native": "^0.51.0",
