--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^4.8.1",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-native": "^0.51.0",
     "react-native-beacons-manager": "^1.0.7",
