--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-calendars": "^1.16.1",
     "react-native-camera": "^1.0.1",
     "react-native-elements": "^0.18.5",
+    "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.27",
     "react-native-ui-kitten": "^3.0.0",
     "react-native-vector-icons": "^4.5.0",
