--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-calendars": "^1.16.1",
     "react-native-camera": "^1.0.1",
     "react-native-elements": "^0.18.5",
+    "react-native-image-picker": "^0.26.10",
     "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.27",
     "react-native-ui-kitten": "^3.0.0",
