--- a/ios/shpeucfapp.xcodeproj/xcshareddata/xcschemes/shpeucfapp.xcscheme
+++ b/ios/shpeucfapp.xcodeproj/xcshareddata/xcschemes/shpeucfapp.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0920"
+   LastUpgradeVersion = "0620"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SHPE UCF.app"
+               BuildableName = "shpeucfapp.app"
                BlueprintName = "shpeucfapp"
                ReferencedContainer = "container:shpeucfapp.xcodeproj">
             </BuildableReference>
@@ -54,7 +54,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -72,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SHPE UCF.app"
+            BuildableName = "shpeucfapp.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
@@ -84,7 +83,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -96,7 +94,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SHPE UCF.app"
+            BuildableName = "shpeucfapp.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
@@ -115,7 +113,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SHPE UCF.app"
+            BuildableName = "shpeucfapp.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
