--- a/ios/shpeucfapp.xcodeproj/xcshareddata/xcschemes/shpeucfapp.xcscheme
+++ b/ios/shpeucfapp.xcodeproj/xcshareddata/xcschemes/shpeucfapp.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
+   LastUpgradeVersion = "0920"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "shpeucfapp.app"
+               BuildableName = "SHPE UCF.app"
                BlueprintName = "shpeucfapp"
                ReferencedContainer = "container:shpeucfapp.xcodeproj">
             </BuildableReference>
@@ -54,6 +54,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -71,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "shpeucfapp.app"
+            BuildableName = "SHPE UCF.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
@@ -83,6 +84,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -94,7 +96,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "shpeucfapp.app"
+            BuildableName = "SHPE UCF.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
@@ -113,7 +115,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "shpeucfapp.app"
+            BuildableName = "SHPE UCF.app"
             BlueprintName = "shpeucfapp"
             ReferencedContainer = "container:shpeucfapp.xcodeproj">
          </BuildableReference>
