--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,11 +98,11 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.shpeucfapp"
+        applicationId "com.shpeucf"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.01"
+        versionCode 2
+        versionName "1.02"
         // ndk {
         //     abiFilters "armeabi-v7a", "x86"
         // }
