--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,9 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
+        jcenter()
+        
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -31,8 +34,8 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+        maven { url 'https://maven.google.com' }
 
-        google()
-        jcenter()
+        maven { url "https://www.jitpack.io" }
     }
 }
