--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,6 +30,8 @@ target 'shpeucfapp' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'shpeucfappTests' do
     inherit! :search_paths
     # Pods for testing
