--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,11 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 target 'shpeucfapp' do
   # Pods for shpeucfapp
+
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  
   pod 'React', :path => '../node_modules/react-native/'
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera.podspec"
   pod 'React-Core', :path => '../node_modules/react-native/React'
   pod 'React-DevSupport', :path => '../node_modules/react-native/React'
   pod 'React-RCTActionSheet', :path => '../node_modules/react-native/Libraries/ActionSheetIOS'
@@ -29,6 +33,11 @@ target 'shpeucfapp' do
 
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+
+
+
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
 
   target 'shpeucfappTests' do
     inherit! :search_paths
