--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
   },
   "dependencies": {
     "firebase": "^6.4.2",
+    "qrcode": "^1.4.4",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-beacons-manager": "^1.0.7",
     "react-native-calendars": "git+https://github.com/SHPEUCF/react-native-calendars.git",
+    "react-native-camera": "^3.11.1",
     "react-native-elements": "^1.1.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-crop-picker": "^0.26.1",
+    "react-native-permissions": "^2.0.3",
     "react-native-progress": "^3.6.0",
+    "react-native-qrcode-scanner": "^1.3.1",
+    "react-native-qrcode-svg": "^5.3.2",
     "react-native-router-flux": "^4.0.6",
+    "react-native-svg": "^9.13.3",
     "react-native-ui-kitten": "^4.2.0-beta.1",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.1",
