--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "reinstall": "rm -rf node_modules; yarn cache clean; yarn install",
+    "ios": "react-native run-ios",
+    "ios-min": "react-native run-ios --simulator 'iPhone 5s'",
+    "ios-mid": "react-native run-ios --simulator 'iPhone 8 Plus'",
+    "ios-max": "react-native run-ios --simulator 'iPhone 11'",
+    "ipad": "react-native run-ios --simulator 'iPad Air'",
+    "ios-device": "react-native run-ios --device",
+    "android-min": "react-native run-android",
+    "android-max": "react-native run-android",
+    "android-release": "react-native run-android --variant=release"
   },
   "dependencies": {
     "firebase": "^6.4.2",
