QR code Android permissions

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,7 @@ android {
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     splits {
         abi {
