--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,8 @@ target 'shpeucfapp' do
 
   pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'shpeucfappTests' do
     inherit! :search_paths
     # Pods for testing
