--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "android-release": "react-native run-android --variant=release"
   },
   "dependencies": {
-    "firebase": "^7.6.1",
+    "firebase": "^6.4.2",
     "qrcode": "^1.4.4",
     "react": "16.12.0",
     "react-native": "0.61.5",
     "react-native-calendars": "git+https://github.com/SHPEUCF/react-native-calendars.git",
     "react-native-camera": "^3.15.1",
-    "react-native-elements": "^1.2.7",
+    "react-native-color-picker": "^0.4.5",
+    "react-native-elements": "^1.2.0",
+    "react-native-flags": "^1.0.0",
     "react-native-image-crop-picker": "^0.26.2",
     "react-native-permissions": "^2.0.9",
     "react-native-progress": "^4.0.3",
@@ -32,6 +34,7 @@
     "react-native-qrcode-svg": "^6.0.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-svg": "^10.0.0",
+    "react-native-svg-flagkit": "^0.9.5",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
