--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dev-tools": "^0.1.6",
     "firebase": "^6.4.2",
+    "gapi-client": "0.0.3",
     "install": "^0.13.0",
     "npm": "^6.13.6",
     "qrcode": "^1.4.4",
@@ -39,6 +40,7 @@
     "react-native-svg": "^10.0.0",
     "react-native-svg-flagkit": "^0.9.5",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.0.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
