--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-elements": "^1.2.0",
     "react-native-flags": "^1.0.0",
     "react-native-image-crop-picker": "^0.26.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-permissions": "^2.0.9",
     "react-native-progress": "^4.0.3",
     "react-native-qrcode-scanner": "^1.3.1",
