--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-native-camera": "^3.15.1",
 		"react-native-color-picker": "^0.4.5",
 		"react-native-elements": "^1.2.0",
+		"react-native-fast-image": "^8.1.5",
 		"react-native-flags": "^1.0.0",
 		"react-native-image-crop-picker": "^0.26.2",
 		"react-native-keyboard-aware-scroll-view": "^0.9.1",
