--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"android-release": "react-native run-android --variant=release"
 	},
 	"dependencies": {
+		"babel-preset-react-native": "^4.0.1",
 		"dev-tools": "^0.1.6",
 		"firebase": "^6.4.2",
 		"gapi-client": "0.0.3",
@@ -29,6 +30,7 @@
 		"react-native-calendars": "git+https://github.com/SHPEUCF/react-native-calendars.git",
 		"react-native-camera": "^3.15.1",
 		"react-native-color-picker": "^0.5.2",
+		"react-native-dotenv": "^0.2.0",
 		"react-native-elements": "^1.2.7",
 		"react-native-fast-image": "^8.1.5",
 		"react-native-flags": "^1.0.0",
