refactored how the user redux handles all data as well as everything that uses the User redux and replaced all forms that changed the User to use the new Form component
fixed changed

fixed requests

fixed requests

fixed requests

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
 		"one-var": ["error", "never"],
 		"no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
 		"indent": ["error", "tab", {"SwitchCase": 1}],
-		"max-len": ["error", { "code": 120 }],
+		"max-len": ["error", { "code": 120, "comments": 160, "ignoreStrings": true, "ignoreTemplateLiterals": true }],
 		"keyword-spacing": ["error", { "before": true }],
 		"space-infix-ops": "error",
 		"comma-spacing": ["error", { "before": false, "after": true }],
@@ -43,7 +43,7 @@
 		"no-multi-spaces": "error",
 		"quotes": ["error", "double", { "avoidEscape": true }],
 		"brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
-		"curly": ["error", "multi", "consistent"],
+		"curly": ["error", "multi-or-nest", "consistent"],
 		"semi": ["error", "always", { "omitLastInOneLineBlock": true }],
 		"space-before-blocks": "error",
 		"no-trailing-spaces": "error",
