Added Linking functionality to the social media and mail button in the profile page. In FormData page at editProfileFormDataRegular added a field call linkedin. In User page under initial state added linkedin field. In the iOS Info.plist added LSApplicationQueriesSchemes array and the whitelisted apps uri.

--- a/ios/shpeucfapp/Info.plist
+++ b/ios/shpeucfapp/Info.plist
@@ -22,6 +22,14 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>instagram</string>
+		<string>slack</string>
+		<string>facebook</string>
+		<string>fb</string>
+		<string>linkedin</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
