--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"firebase": "^6.4.2",
 		"gapi-client": "0.0.3",
 		"install": "^0.13.0",
+		"logkitty": "^0.7.1",
 		"npm": "^6.13.6",
 		"qrcode": "^1.4.4",
 		"react": "^16.13.1",
@@ -48,6 +49,7 @@
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
 		"rn-fetch-blob": "^0.12.0",
+		"websocket-extensions": "^0.1.4",
 		"xdate": "^0.8.2"
 	},
 	"devDependencies": {
