Add single-quote rule for JS and JSX

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -60,10 +60,13 @@ rules:
     - error
     - multi-or-nest
     - consistent
-  quotes:                                  # require double-quotes instead of single
+  quotes:                                  # require single-quotes instead of single
     - error
-    - double
+    - single
     - avoidEscape: true
+  jsx-quotes:                              # require single-quotes for component props
+    - error
+    - prefer-single
   brace-style:                             # require opening brace on same line, ending brace on a new line
     - error
     - stroustrup
