--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"android-release": "react-native run-android --variant=release"
 	},
 	"dependencies": {
+		"@react-native-community/async-storage": "^1.11.0",
 		"babel-preset-react-native": "^4.0.1",
 		"dev-tools": "^0.1.6",
 		"firebase": "^6.4.2",
@@ -27,7 +28,8 @@
 		"npm": "^6.13.6",
 		"qrcode": "^1.4.4",
 		"react": "^16.13.1",
-		"react-native": "0.61.5",
+		"react-native": "^0.61.5",
+		"react-native-app-intro-slider": "^4.0.4",
 		"react-native-camera": "^3.15.1",
 		"react-native-color-picker": "^0.5.2",
 		"react-native-dotenv": "^0.2.0",
