--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ build/
 .gradle
 local.properties
 *.iml
+*.hprof
 
 # Environment
 # Firebase API
@@ -59,3 +60,6 @@ coverage/
 */fastlane/report.xml
 */fastlane/Preview.html
 */fastlane/screenshots
+
+#VS Code
+.vscode/*
